--- a/Saved/Config/Windows/EditorUserSettings.ini
+++ b/Saved/Config/Windows/EditorUserSettings.ini
@@ -42,7 +42,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MeasuringToolUnits=MeasureUnits_Centimeters
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=422.000 Y=40.000
